--- a/exercise7.css
+++ b/exercise7.css
@@ -15,3 +15,13 @@
 .main-visual-title {
   padding: 20px;
 }
+
+main {
+  width: 840px;
+  margin: 50px auto;
+}
+.box1 {
+  margin-bottom: 50px;
+  border-bottom: 1px solid #6c6b6b;
+  padding-bottom: 50px;
+}
